[package]
name = "ifpfs-uploader"
version = "0.1.0"
edition = "2018"

[profile.release]
opt-level = 3
codegen-units = 1
lto = true

[dependencies]
log = "0.4"
env_logger = "0.9"
structopt = "0.3"
ipfs-api-backend-hyper = "0.2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
ethers = "0.5"

[dev-dependencies]
assert_cmd = "2"
tempfile = "3.2"
rand = "0.8"